# mai_os

KP/: CMakeLists.txt
KP/doc/: report.docx
KP/src/: a.c  b.c  c.c
lab1/doc/: report.docx
lab2/: CMakeLists.txt
lab2/doc/: report.docx
lab2/src/: child.cpp  main.cpp
lab3/: CMakeLists.txt
lab3/doc/: report.docx
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/doc/: report.docx
lab4/src/: child.cpp  main.cpp
lab5/: CMakeLists.txt
lab5/doc/: report.docx
lab5/include/: lib.h
lab5/src/: config.h  config.h.in  lib1.cpp  lib2.cpp  main1.cpp  main2.cpp
lab6/: CMakeLists.txt  clrpid.sh  log.txt  make.sh
lab6/doc/: report.docx
lab6/include/: labtools.h
lab6/src/: client.cpp  server.cpp
